--- a/first-cli/package.json
+++ b/first-cli/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "cross-spawn": "^7.0.3",
+    "download-git-repo": "^3.0.2",
     "figlet": "^1.5.2",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.2.0",
-    "ora": "^6.0.1"
+    "ora": "5.4.0"
   },
   "devDependencies": {}
 }
